logs/yaha.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaha'...
Compiling './lib/python3.5/site-packages/yaha/__init__.py'...
***   File "./lib/python3.5/site-packages/yaha/__init__.py", line 100
    print tmp_file
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yaha/analyse'...
Compiling './lib/python3.5/site-packages/yaha/analyse/__init__.py'...
***   File "./lib/python3.5/site-packages/yaha/analyse/__init__.py", line 164
    if matching_sentence <> '':
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yaha/analyse/analyzer.py'...
***   File "./lib/python3.5/site-packages/yaha/analyse/analyzer.py", line 22
    accepted_chars = re.compile(ur"[\u4E00-\u9FA5]+")
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yaha/dict'...
Compiling './lib/python3.5/site-packages/yaha/prioritydictionary.py'...
***   File "./lib/python3.5/site-packages/yaha/prioritydictionary.py", line 38
    raise IndexError, "smallest of empty priorityDictionary"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yaha-0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
